@@ -5,6 +5,13 @@ This file holds the changes of the AIT QKD R10 throughout the versions
 Changes from 9.9999.6 to 9.9999.7
 ---------------------------------
 
+* Dropping *_rate DBus properties from module.
+
+    The module does not publish *_rate for keys, keybits, and
+    disclosed bits any longer. This values have been
+    misleading.
+
+
 * q3pd config support now automatic ip assignment and routing
 
     Due to the new "nic" option inside a link configuration of the
